--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,9 +7,11 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(SDL3 REQUIRED)
 find_package(PNG REQUIRED)
+find_package(raylib REQUIRED)
 
 include_directories(${SDL3_INCLUDE_DIRS})
 include_directories(${PNG_INCLUDE_DIRS})
+include_directories(${raylib_INCLUDE_DIRS})
 
 include_directories(../lib/sandbox)
 
@@ -17,4 +19,4 @@ add_executable(console
     main.cpp
 )
 
-target_link_libraries(console ${SDL3_LIBRARIES} ${PNG_LIBRARIES} Sandbox)
+target_link_libraries(console ${SDL3_LIBRARIES} ${PNG_LIBRARIES} ${raylib_LIBRARIES} Sandbox)
